/*
Copyright 2024 Nokia.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = "proto2";

package github.com.kuidio.kuid.apis.id.v1alpha1;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

// Package-wide variables from generator "generated".
option (gogoproto.marshaler_all) = true;
option (gogoproto.stable_marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_enum_prefix_all) = false;
option (gogoproto.goproto_getters_all) = false;
option go_package = "github.com/kuidio/kuid/apis/id/v1alpha1";

message ClusterID {
  optional SiteID siteID = 1 [(gogoproto.customname) = "SiteID", (gogoproto.nullable) = false];

  // Cluster defines the name of the cluster
  optional string cluster = 2 [(gogoproto.customname) = "Cluster", (gogoproto.nullable) = false];
}

message EndpointID {
  optional NodeID nodeID = 1 [(gogoproto.customname) = "NodeID", (gogoproto.nullable) = false];

  // ModuleBay defines the moduleBay reference id
  optional int64 moduleBay = 2 [(gogoproto.customname) = "ModuleBay"];

  // Module defines the module reference id
  optional int64 module = 3 [(gogoproto.customname) = "Module"];

  // Port defines the id of the port
  optional int64 port = 4 [(gogoproto.customname) = "Port", (gogoproto.nullable) = false];

  // Adaptor defines the name of the adaptor
  optional string adaptor = 5 [(gogoproto.customname) = "Adaptor", (gogoproto.nullable) = false];

  // Endpoint defines the name of the endpoint
  optional int64 endpoint = 6 [(gogoproto.customname) = "Endpoint", (gogoproto.nullable) = false];
}

message NodeID {
  optional SiteID siteID = 1 [(gogoproto.customname) = "SiteID", (gogoproto.nullable) = false];

  // Node defines the name of the node
  optional string node = 2 [(gogoproto.customname) = "Node", (gogoproto.nullable) = false];
}

message PartitionAdaptorID {
  optional PartitionPortID nodeID = 1 [(gogoproto.customname) = "PartitionPortID", (gogoproto.nullable) = false];

  // Adaptor defines the name of the adaptor
  optional string adaptor = 5 [(gogoproto.customname) = "Adaptor", (gogoproto.nullable) = false];
}

message PartitionAttachmentID {
  // Partition defines the partition this resource belongs to
  optional string partition = 1 [(gogoproto.customname) = "Partition", (gogoproto.nullable) = false];

  // SiteID define the siteid of the node
  optional SiteID siteID = 2 [(gogoproto.customname) = "SiteID", (gogoproto.nullable) = false];

  // Cluster defines the name of the cluster
  optional string cluster = 3 [(gogoproto.customname) = "Cluster"];

  // Node defines the name of the node
  optional string node = 4 [(gogoproto.customname) = "Node"];

  // Node defines the name of the nodeset
  optional string nodeset = 5 [(gogoproto.customname) = "NodeSet"];

  // Interface defines the name of the interface
  optional string interface = 6 [(gogoproto.customname) = "Interface", (gogoproto.nullable) = false];
}

message PartitionClusterID {
  // Partition defines the partition this resource belongs to
  optional string partition = 1 [(gogoproto.customname) = "Partition", (gogoproto.nullable) = false];

  // SiteID define the siteid of the node
  optional SiteID siteID = 2 [(gogoproto.customname) = "SiteID", (gogoproto.nullable) = false];

  // Cluster defines the name of the cluster
  optional string cluster = 3 [(gogoproto.customname) = "Cluster", (gogoproto.nullable) = false];
}

message PartitionEndpointID {
  optional PartitionNodeID nodeID = 1 [(gogoproto.customname) = "PartitionNodeID", (gogoproto.nullable) = false];

  // ModuleBay defines the moduleBay reference id
  optional int64 moduleBay = 2 [(gogoproto.customname) = "ModuleBay"];

  // Module defines the module reference id
  optional int64 module = 3 [(gogoproto.customname) = "Module"];

  // Port defines the id of the port
  optional int64 port = 4 [(gogoproto.customname) = "Port", (gogoproto.nullable) = false];

  // Adaptor defines the name of the adaptor
  optional string adaptor = 5 [(gogoproto.customname) = "Adaptor"];

  // Endpoint defines the name of the endpoint
  optional int64 endpoint = 6 [(gogoproto.customname) = "Endpoint", (gogoproto.nullable) = false];

  // Name is used to refer to internal names of the node
  optional string name = 7 [(gogoproto.customname) = "Name"];
}

message PartitionNodeID {
  // Partition defines the partition this resource belongs to
  optional string partition = 1 [(gogoproto.customname) = "Partition", (gogoproto.nullable) = false];

  // SiteID define the siteid of the node
  optional SiteID siteID = 2 [(gogoproto.customname) = "SiteID", (gogoproto.nullable) = false];

  // Node defines the name of the node
  optional string node = 3 [(gogoproto.customname) = "Node", (gogoproto.nullable) = false];
}

message PartitionPortID {
  optional PartitionNodeID nodeID = 1 [(gogoproto.customname) = "PartitionNodeID", (gogoproto.nullable) = false];

  // ModuleBay defines the moduleBay reference id
  optional int64 moduleBay = 2 [(gogoproto.customname) = "ModuleBay"];

  // Module defines the module reference id
  optional int64 module = 3 [(gogoproto.customname) = "Module"];

  // Port defines the id of the port
  optional int64 port = 4 [(gogoproto.customname) = "Port", (gogoproto.nullable) = false];
}

message PartitionProviderEndpointID {
  optional PartitionProviderNodeID nodeID = 2 [(gogoproto.customname) = "PartitionProviderNodeID", (gogoproto.nullable) = false];

  // ModuleBay defines the moduleBay reference id
  optional int64 moduleBay = 3 [(gogoproto.customname) = "ModuleBay"];

  // Module defines the module reference id
  optional int64 module = 4 [(gogoproto.customname) = "Module"];

  // Port defines the id of the port
  optional int64 port = 5 [(gogoproto.customname) = "Port", (gogoproto.nullable) = false];

  // Adaptor defines the name of the adaptor
  optional string adaptor = 6 [(gogoproto.customname) = "Adaptor"];

  // Endpoint defines the name of the endpoint
  optional int64 endpoint = 7 [(gogoproto.customname) = "Endpoint", (gogoproto.nullable) = false];

  // Name is used to refer to internal names of the node
  optional string name = 8 [(gogoproto.customname) = "Name"];
}

message PartitionProviderNodeID {
  // Partition defines the partition this resource belongs to
  optional string partition = 1 [(gogoproto.customname) = "Partition", (gogoproto.nullable) = false];

  // SiteID define the siteid of the node
  optional SiteID siteID = 2 [(gogoproto.customname) = "SiteID", (gogoproto.nullable) = false];

  // Node defines the name of the node
  optional string node = 3 [(gogoproto.customname) = "Node", (gogoproto.nullable) = false];

  // Provider defines the provider implementing this resource.
  optional string provider = 4 [(gogoproto.customname) = "Provider", (gogoproto.nullable) = false];

  // PlatformType define the type of platform implementing the nodespec
  optional string platformType = 5 [(gogoproto.customname) = "PlatformType", (gogoproto.nullable) = false];
}

message SiteID {
  // Region defines the region of the resource
  optional string region = 1 [(gogoproto.customname) = "Region", (gogoproto.nullable) = false];

  // Site defines the site of the resource
  optional string site = 2 [(gogoproto.customname) = "Site", (gogoproto.nullable) = false];
}

